--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-ultralytics==8.3.116
-opencv-python-headless==4.5.5.64
-streamlit
-Pillow
+streamlit==1.38.0
+ultralytics==8.3.15
+Pillow==10.4.0
+numpy==1.26.4
+opencv-python==4.8.0.76
